src/styles/styles.css
body {
  background-color: #ddd;
}

ol, ul {
  padding-left: 30px;
}

.board-row:after {
  clear: both;
  content: "";
  display: table;
}

.status {
  margin-top: -10%;
  margin-bottom: 10%;
  margin-left: -30%;
  margin-right: -30%;
}

.start-game h1 {
  font: 12vw "Brush Script";
  text-align: center;
  line-height: 0%;
  margin-top: 10%;
  color:rgb(85, 61, 61);
}

.start-game h2 {
  font: 1.875rem "Brush Script";
  text-align: center;
  margin-top: 15%;
  color:rgb(85, 61, 61);
}

.start-game h6 {
  font: 1.5rem "Brush Script";
  text-align: center;
  margin-top: -2%;
  color:rgb(85, 61, 61);
}

.start-game button {
  border-width:thick;
  border-radius:45px;
  border-color:rgb(78, 10, 10);
  border-style:double;
  padding: 14px;
  font: 3rem "Brush Script";
  color:rgb(85, 61, 61);
  background-color: #ddd;
  display: grid;
  margin: auto;
  width:20rem;
  height:5.5rem;
  line-height: 1;
  
}

.start-game button:hover { background-color: rgb(190, 190, 190); }

.start-game button:active {
  background-color: rgb(160, 160, 160);
}

.square1 {
  background: rgb(212, 199, 199);
  border: 5px solid rgb(66, 60, 60);
  float: left;
  color: rgb(52, 72, 184);
  font-size: 9rem;
  font-weight: bold;
  line-height: 34px;
  height: 10rem;
  margin-right: -4px;
  margin-top: -4px;
  padding: 0;
  text-align: center;
  width: 10rem;
}

.square1:focus {
  outline: none;
}

.square2 {
  background: rgb(212, 199, 199);
  border: 5px solid rgb(66, 60, 60);
  float: left;
  color: rgb(204, 31, 31);
  font-size: 9rem;
  font-weight: bold;
  line-height: 34px;
  height: 10rem;
  margin-right: -4px;
  margin-top: -4px;
  padding: 0;
  text-align: center;
  width: 10rem;
}

.square2:focus {
  outline: none;
}

.winningSquare1 {
  background: rgb(48, 224, 127);
  border: 5px solid rgb(66, 60, 60);
  float: left;
  color: rgb(52, 72, 184);
  font-size: 12rem;
  font-weight: bold;
  line-height: 34px;
  height: 10rem;
  margin-right: -4px;
  margin-top: -4px;
  padding: 0;
  text-align: center;
  width: 10rem;
}

.winningSquare2 {
  background: rgb(48, 224, 127);
  border: 5px solid rgb(66, 60, 60);
  float: left;
  color: rgb(204, 31, 31);
  font-size: 12rem;
  font-weight: bold;
  line-height: 34px;
  height: 10rem;
  margin-right: -4px;
  margin-top: -4px;
  padding: 0;
  text-align: center;
  width: 10rem;
}

.kbd-navigation .square:focus {
  background: #ddd;
}

.game-board {
  position: absolute;
  align-self:center;
  top:25%;
  left:30%;
  font: 50px "Brush Script";
  text-align: center;
  color:rgb(85, 61, 61);
}

.quit button {
  border-width:thick;
  border-radius:40px;
  border-color:rgb(78, 10, 10);
  border-style:double;
  padding: 12px;
  font: 3rem "Brush Script";
  color:rgb(85, 61, 61);
  background-color: #ddd;
  margin-top:.5rem;
  margin-left:.5rem;
  width:14rem;
  height:5.25rem;
  line-height: 1;
}

.quit button:hover { background-color: rgb(190, 190, 190); }

.quit button:active {
  background-color: rgb(160, 160, 160);
}

.game-main-headers {
  display:grid;
  grid-template-columns: 1fr 2fr 1fr;
}

.game-header h2 {
  font: 100px "Brush Script";
  color:rgb(85, 61, 61);
  font-weight: bold;
  text-align: center;
  margin:0 auto;
  position: relative;
  align-self:center;
  top:1%;
}

.game-info {
  margin-left: 20px;
}

.options-page h2 {
  font: 8vw "Brush Script";
  color:rgb(85, 61, 61);
  font-weight: bold;
  line-height: 200px;
  height: 200px;
  margin-top: -130px;
  text-align: center;
}


.options-page button {
  border-width:thick;
  border-radius:40px;
  border-color:rgb(78, 10, 10);
  padding: 12px;
}


.options-page button:hover { background-color: rgb(190, 190, 190); }

.options-page button:active {
  background-color: rgb(160, 160, 160);
}

.save button {
  border-width:thick;
  border-radius:40px;
  border-color:rgb(78, 10, 10);
  border-style:double;
  padding: 1rem;
  font: 3rem "Brush Script";
  color:rgb(85, 61, 61);
  background-color: #ddd;
  margin-top:.5rem;
  margin-left:.5rem;
  width:14rem;
  height:5.25rem;
  line-height: 1;
}

.save button:hover { background-color: rgb(190, 190, 190); }

.save button:active {
  background-color: rgb(160, 160, 160);
}

.who-first {
  border-width:thick;
  border-radius:40px;
  border-color:rgb(78, 10, 10);
  border-style: double;
  outline:none;
  padding: 14px;
  font: 50px "Brush Script";
  color:rgb(85, 61, 61);
  background-color: #ddd;
  display:inline-flex;
  text-align: center;
}

.name-label {
display:grid;
grid-template-columns: .35fr 1fr 1fr .35fr;
margin-bottom:1rem;
}

.name-label label {
font-weight: bold;
font: 35px "Brush Script";
text-align: center;
justify-content:space-between;
margin-left: 10%;
color:rgb(85, 61, 61);
}

.name-box {
  border-width:thick;
  border-color:rgb(78, 10, 10);
  border-style: solid;
  outline:none;
  padding: 14px;
  font: 25px "Brush Script";
  color:rgb(85, 61, 61);
  background-color: #ddd;
  display:inline-flex;
  width: 17.5%;
  justify-content: space-evenly;
  text-align: center;
  margin-left: 4.5%;
  margin-right: 12.5%;
}

.optionChoiceNames {
  font: 30px "Brush Script";
  display: inline-flex;
  justify-content:space-between;
  color:rgb(85, 61, 61);
  margin-left:5%;
  margin-top:2 rem;
}

.who-first-label {
  font: 30px "Brush Script";
  color:rgb(85, 61, 61);
  margin-left:5%;
  margin-top:-2rem;
}

.who-first-button {
  border-width:thick;
  border-color:rgb(78, 10, 10);
  border-style: solid;
  outline:none;
  padding: 14px;
  font: 25px "Brush Script";
  color:rgb(85, 61, 61);
  background-color: #ddd;
  display:-ms-inline-grid;
  width: 15.5rem;
  text-align: center;
  margin-top: 2rem;
  margin-left: 7%;
  margin-right: 11%;
}

.first-label {
  font: 30px "Brush Script";
  display: inline-flex;
  justify-content:space-between;
  color:rgb(85, 61, 61);
  margin-left:5%;
  margin-top:-1rem;
}

.winning-text  {
  margin-top: 100px;
  font: 75px "Brush Script";
  text-align: center;
  color:rgb(79, 97, 155);
}

.winner {
  margin-left: 5px;
  margin-right: 5px;
  padding-left: 25px;
  text-underline-offset: 10px;
  color:rgb(240, 114, 30);
}


.brackets {
  color:rgba(16, 66, 38, 0.658);
}

.restart button {
  border-width:thick;
  border-radius:40px;
  border-color:rgb(44, 28, 14);
  border-style:double;
  padding: 12px;
  font: 50px "Brush Script";
  color:rgb(85, 61, 61);
  background-color: #ddd;
  margin-top:.5rem;
  margin-left:.5rem;
  width:14rem;
  height:5.25rem;
  line-height: 1;
}

.restart button:hover { background-color: rgb(190, 190, 190); }

.restart button:active {
  background-color: rgb(160, 160, 160);
}

